fixed whitespace on drawing area

--- a/styles/style.css
+++ b/styles/style.css
@@ -109,14 +109,14 @@ button:hover{
 
 #container {
     display:flex;
-    background-color: bisque; /* bisque */
+    background-color: rgb(255, 53, 53); /* bisque */
     width:40%;
     height:60vh;
     padding:2px;
     justify-content: stretch;
     align-items: stretch;
     flex-wrap: wrap;
-    border:60px solid rgb(255, 53, 53);
+    padding:60px;
     border-radius: 40px;
     box-shadow: 5px 5px rgba(128, 128, 128, 0.3);
 }
